--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "dotenv>=0.9.9",
     "langchain[openai]>=0.3.26",
     "langgraph>=0.5.3",
     "langgraph-api>=0.2.89",
